--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,13 @@ services:
     networks:
       - mynetwork
     restart: unless-stopped
-
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: zipkin
+    ports:
+      - 9411:9411
+    networks:
+      - mynetwork
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin_container
