--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 spring.application.name=company-service
+
+#Zipikin
+management.tracing.sampling.probability=1.0
